# bountygate

./: .gitattributes  .gitignore  CRITIQUE.md  README.md  pyproject.toml
airflow/: Dockerfile  README.md  docker-compose.yml  requirements.txt
app/shared/python/: __init__.py  pyproject.toml
app/shared/python/bountygate/: __init__.py
app/shared/python/bountygate/data_exporters/: export_df_dict.py  export_titanic_clean.py
app/shared/python/bountygate/data_loaders/: get_odds_events.py  get_odds_player_props.py  load_hd_ud_analysis.py  load_odds_events.py  load_odds_player_props.py  load_odds_sports.py  load_titanic.py  load_ud_analysis.py  load_ud_ou_lines.py  prizepicks.py  trigger_get_odds_pipeline.py  trigger_update_bg_lines_pipeline.py
app/shared/python/bountygate/transformers/: create_ud_analysis.py  enrich_odds_player_props.py  fill_in_missing_values.py  parse_ud_ou_lines.py  underdog.py
app/shared/python/bountygate/utils/: db_connection.py  discord_notify.py  etl_assets.py
app/shared/python/bountygate/utils/table_structures/: market_lines.json
arbitrage_executor/: CLAUDE.md  GEMINI.md  USAGE.md  bet_placer.py  chrome_helpers.py  db_connection.py  execute_arb.py  execution_logger.py  map_selectors.py  market_aliases_template.yaml  opportunity.py  pyproject.toml  selector_finder.py  selectors_template.yaml  task_worker.py
claude_toolkit/: README.md  dag_state.py  doctor.py  inspect_queue.py  recent_alerts.py  rescue_stuck_tasks.py  selector_smoke_test.py  tail_audit.py  test_discord.py
scripts/: devdb.py  dq_checks.py  generate_market_aliases.py  (+10 more)
(+29 files in other folders)
